<resources>
    <string name="app_name" translatable="false">Pills Keeper</string>
    <string name="iniziamo">iniziamo</string>
    <string name="benvenuto">Benvenuto!</string>
    <string name="cel_dveloping" translatable="false">CEL DVELOPING</string>
    <string name="button" translatable="false">Button</string>
    <string name="farmacia">farmacia</string>
    <string name="farmaci">farmaci</string>
    <string name="medico">medico</string>
    <string name="contatti">contatti</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="dottore">dottore</string>
    <string name="pills_keeper" translatable="false">Pills Keeper</string>
    <string name="cel_developing" translatable="false">CEL DEVELOPING</string>
    <string name="reminder">promemoria</string>
    <string name="title_activity_farmaci">farmaci</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <!-- google maps-->
    <string name="map_key" translatable="false">AIzaSyDBdaRlOOR6a0xlrESgoFy1g_r_16475zU</string>
    <string name="Instrument" translatable="false">Instrument</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="aggiungi_un_farmaco">aggiungi un farmaco</string>
    <string name="aggiungi_un_reminder">aggiungi un reminder</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Accesso_non_eseguito">Ops, sembra che tu non sia ancora registrato. <br>Premi qui per creare o accedere ad un account.</br></string>
    <string name="nome_farmaco">Nome Farmaco</string>
    <string name="dosaggio">Dosaggio</string>
    <string name="immagine_del_farmaco">Immagine del Farmaco</string>
    <string name="ben_tornato">Ben tornato!</string>
    <string name="esci">Esci</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="foto">foto</string>
    <string name="profilo">Profilo</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>