<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:id="@+id/LinearLayout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/immagineFarmaco"
            android:contentDescription="@string/immagine_del_farmaco">
        </de.hdodenhof.circleimageview.CircleImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/NomeFarmaco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_farmaco"
                android:textColor="#F28891"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/dose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dosaggio"
                android:textColor="@color/blu"
                android:layout_margin="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                />


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>