<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu_iniziale">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medico"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="273dp"
        tools:layout_editor_absoluteY="548dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contatti"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="548dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="114dp"
        android:layout_height="80dp"
        android:layout_marginStart="236dp"
        android:layout_marginLeft="236dp"
        android:layout_marginTop="288dp"
        android:text="@string/farmacia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="114dp"
        android:layout_height="80dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:text="@string/contatti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <Button
        android:id="@+id/button2"
        android:layout_width="114dp"
        android:layout_height="80dp"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="88dp"
        android:text="@string/medico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="135dp"
        android:layout_height="131dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/loghino"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="135dp"
        android:layout_height="128dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403"
        app:srcCompat="@drawable/fasrmaci" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farmaci"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="405dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farmacia"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="273dp"
        tools:layout_editor_absoluteY="405dp" />

</androidx.constraintlayout.widget.ConstraintLayout>